instructions, error messages, minor visual tweaks, thanks page

--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -31,6 +31,13 @@
     total_endowment = {{ C.total_endowment }}
     receiver_endowment = {{ C.receiver_endowment }}
 
+    /// Function for showing customized error messages
+    const errorDiv = document.querySelector('.otree-form-errors');
+
+    if (errorDiv) {
+        errorDiv.textContent = 'Please make a decision to continue.'
+    }
+
 
 ////////////// function for displaying the task, numbers, and labels and managing the click event
 
@@ -527,13 +534,13 @@
         <!-- Add hidden input to store the selected value -->
         <input type="hidden" name="dic_norm_decision1" id="selected-norm-1">
 
-        {{ formfield_errors 'dic_norm_decision1' }}
+<!--        {{ formfield_errors 'dic_norm_decision1' }}-->
 
     {% else %}
         <!-- Add hidden input to store the selected value -->
         <input type="hidden" name="dic_decision1" id="selected-dic_decision1">
 
-        {{ formfield_errors 'dic_decision1' }}
+<!--        {{ formfield_errors 'dic_decision1' }}-->
 
     {% endif %}
 
