--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -1694,7 +1694,7 @@
             </div>
 
 
-        <p> <strong> How many points do you <b style="color: red;">give</b> to Person A?</strong> </p>
+        <p> <strong> How many points do you <b style="color: red;">remove</b> from Person A?</strong> </p>
 
         <div class='numbers'>
            <div class="number-row" data-row="punish">
