--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -59,8 +59,8 @@
         $('.dictatorCountry').attr('src', '/static/global/flags/' + dictatorCountry +'.png');
 
         // get maps
-        $('.receiverCountryMap').attr('src', '/static/global/worldmap/' + receiverCountry +'_map.png');
-        $('.dictatorCountryMap').attr('src', '/static/global/worldmap/' + dictatorCountry +'_map.png');
+        $('.receiverCountryMap').attr('src', '/static/global/worldmap/' + receiverCountry +'.png');
+        $('.dictatorCountryMap').attr('src', '/static/global/worldmap/' + dictatorCountry +'.png');
 
 
         // Initialize coin stacks and number labels for each decision
