--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -198,8 +198,8 @@
         $('.dictatorCountry').attr('src', '/static/global/flags/' + dictatorCountry +'.png');
 
         // get maps
-        $('.receiverCountryMap').attr('src', '/static/global/worldmap/' + receiverCountry +'_map.png');
-        $('.dictatorCountryMap').attr('src', '/static/global/worldmap/' + dictatorCountry +'_map.png');
+        $('.receiverCountryMap').attr('src', '/static/global/worldmap/' + receiverCountry +'.png');
+        $('.dictatorCountryMap').attr('src', '/static/global/worldmap/' + dictatorCountry +'.png');
 
 
         // only in TP_decision conditions
