--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -169,8 +169,8 @@
             $('.dictatorCountry').attr('src', '/static/global/flags/' + dictatorCountry +'.png');
 
             // get maps
-            $('.receiverCountryMap').attr('src', '/static/global/worldmap/' + receiverCountry +'_map.png');
-            $('.dictatorCountryMap').attr('src', '/static/global/worldmap/' + dictatorCountry +'_map.png');
+            $('.receiverCountryMap').attr('src', '/static/global/worldmap/' + receiverCountry +'.png');
+            $('.dictatorCountryMap').attr('src', '/static/global/worldmap/' + dictatorCountry +'.png');
         }
 
         // Set the default display text for TP cost
