--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -49,7 +49,7 @@
         receiverCountry = "{{ recip_identity }}"
         dictatorCountry = "{{ dic_identity }}"
 
-        role_switch_true = "{{ role_switch_true }}"
+        // role_switch_true = "{{ role_switch_true }}"
 
 
         /////////// script
@@ -546,6 +546,16 @@
 
 
     {% if "norm" in player.treatment %}
+
+        {% if player.round_number < 3 %}
+            <b> Now, you decide how <b style="color: red;">socially appropriate</b> the decision of Person A is. <br> <br> </b>
+            <p style="font-size: 14px; ">
+                To make a decision, click on one of the six buttons.<br><br>
+                Importantly, you will receive <b>12 additional points</b> if your decision is the same as the most
+                common decision among all other participants in {{current_country}}.
+            </p>
+        {% endif %}
+
         {% for dic_norm_decision in dic_norm_decisions %}
         <div class='responsive-div'>
 
@@ -597,29 +607,20 @@
                 <img src="/static/global/punish arrow grey.png" alt="-" style="position: absolute; width: 8vw; top: 3%; left: 28%;">
             {% endif %}
 
-            {% if "2PP" in player.treatment or "0DG" in player.treatment %}
-                <p>
-                    <b style="color: red; font-size: 24px; position: absolute; top: 43%; left:-18%;">YOU</b>
-                </p>
-            {% else %}
-                <p>
-                    <b style="color: red; font-size: 24px; position: absolute; top: 26%; left:-18%;">YOU</b>
-                </p>
-            {% endif %}
 
 
         </div>
 
-            <p> How <b style="color: red;">socially acceptable</b> is it to give {{ dic_norm_decision.receiver_gets }} points to Person B? </p>
+            <p> How <b style="color: red;">socially appropriate</b> is it for Person A to give {{ dic_norm_decision.receiver_gets }} points to Person B? </p>
 
             <div class='numbers'>
                 <div class="number-row" data-index="{{ dic_norm_decision.index }}" data-input="selected-norm-{{ dic_norm_decision.index }}">
-                    <div class="norm" data-value="0" data-index="{{ dic_norm_decision.index }}">very socially<br>unacceptable</div>
-                    <div class="norm" data-value="1" data-index="{{ dic_norm_decision.index }}">socially<br>unacceptable</div>
-                    <div class="norm" data-value="2" data-index="{{ dic_norm_decision.index }}">slightly socially<br>unacceptable</div>
-                    <div class="norm" data-value="3" data-index="{{ dic_norm_decision.index }}">slightly socially<br>acceptable</div>
-                    <div class="norm" data-value="4" data-index="{{ dic_norm_decision.index }}">socially<br>acceptable</div>
-                    <div class="norm" data-value="5" data-index="{{ dic_norm_decision.index }}">very socially<br>acceptable</div>
+                    <div class="norm" data-value="0" data-index="{{ dic_norm_decision.index }}">very socially<br>inappropriate</div>
+                    <div class="norm" data-value="1" data-index="{{ dic_norm_decision.index }}">socially<br>inappropriate</div>
+                    <div class="norm" data-value="2" data-index="{{ dic_norm_decision.index }}">slightly socially<br>inappropriate</div>
+                    <div class="norm" data-value="3" data-index="{{ dic_norm_decision.index }}">slightly socially<br>appropriate</div>
+                    <div class="norm" data-value="4" data-index="{{ dic_norm_decision.index }}">socially<br>appropriate</div>
+                    <div class="norm" data-value="5" data-index="{{ dic_norm_decision.index }}">very socially<br>appropriate</div>
                 </div>
             </div>
         <br>
@@ -630,14 +631,27 @@
 
     {% else %}
 
-            {% if role_switch_true == True %}
+<!--            {% if role_switch_true == True %}-->
 
-                <p style="text-align: center; ">
-                    <b style="color: red;">Role switch! You are now Person A!</b>
-                </p>
-                <br>
+<!--                <p style="text-align: center; ">-->
+<!--                    <b style="color: red;">Role switch! You are now Person A!</b>-->
+<!--                </p>-->
+<!--                <br>-->
 
-            {% endif %}
+<!--            {% endif %}-->
+
+        <p style="text-align: center; ">
+            <b style="color: red;">You are Person A!</b>
+        </p>
+
+        {% if player.round_number < 3 %}
+            <b> Now, you decide as Person A how many of the 12 points to give to Person B.</b> <br> <br>
+            <p style="font-size: 14px; ">
+                To make a decision, click on a number. As you move your cursor over the numbers
+                (or press them on your phone), you will see how many points you and Person B would receive.
+            </p>
+        {% endif %}
+
 
         <div class='responsive-div'>
 
@@ -738,6 +752,13 @@
             </div>
         </div>
         </div>
+
+    {% if player.round_number < 3 %}
+            <p style="font-size: 14px; ">
+                <br>
+                In this example, you are assigned to the role of Person A. You will also sometimes be assigned to the role of Person B. When you are Person B, you will not see this decision situation, because Person B does not make any decision.
+            </p>
+        {% endif %}
 
     {% endif %}
 
